syntax = "proto3";

package com.netty.protobuf.proto;

option java_package = "com.netty.protobuf.proto";
option java_outer_classname = "SubscribeReqProto";

message SubscribeReq {
    int32 subReqId = 1;
    string userName = 2;
    string productName = 3;
    repeated string address = 4;
}